--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>config-client</module>
         <module>config-server</module>
         <module>eureka-server</module>
         <module>feign-consumer</module>
